# Secure-Hash-Algorithm-1

./: .gitignore
SHA-1/: CMakeLists.txt  SHA-1.cpp  SHA-1.h  main.cpp
