# CMakeList.txt : CMake project for SHA-1, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("SHA-1")

# Add source to this project's executable.
add_executable (SHA-1 "main.cpp" "SHA-1.h" "SHA-1.cpp")

# TODO: Add tests and install targets if needed.
